[tool.poetry]
name = "kilnpi"
version = "0.1.0"
description = "My solar kiln controller"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.8"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kilnpi = "kilnpi.main:main"
